# rust-nethuns-performance-analysis

./: .gitattributes  .gitignore  LICENSE  README.md  all.sh  recv_analysis.sh  send_analysis.sh  zero_send_analysis.sh
compute-metrics-and-confidence-interval/: Cargo.toml
compute-metrics-and-confidence-interval/files/: enp_recv_cpp.txt  enp_recv_rust.txt  enp_send_cpp.txt  enp_send_rust.txt  ens_recv_cpp.txt  ens_recv_rust.txt  ens_send_cpp.txt  ens_send_rust.txt  vale_recv_cpp.txt  vale_recv_rust.txt  vale_send_cpp.txt  vale_send_rust.txt
compute-metrics-and-confidence-interval/src/: main.rs
cpp-tests/: .gitignore  CMakeLists.txt  LICENSE
cpp-tests/src/: perf_recv.cpp  perf_recv_optimized.cpp  perf_send.cpp
data/: .gitignore  README.md  recv.html  recv.stats  send.html  send.stats  send_zero.html  send_zero.stats
data/recv/2023-11-06/: recv_cpp.txt  recv_out.html  recv_rust.txt
data/recv/2023-11-11/: perf_stat.txt  recv_rust.txt
data/recv/2023-11-13/: cpp_recv.txt  cpp_recv_optimized.txt  recv.html  recv_optimized.html  rust_recv.txt  stats.txt
data/recv/2023-11-14/: recv_rust.data
data/recv/2023-11-17/: recv_cpp.data  recv_cpp.txt  recv_rust.data  recv_rust.txt
data/recv/2024-02-19/: recv.stats  recv_cpp.txt  (+1 more)
data/send/: cpp_send_b64_z0.txt
performance-analysis/: .gitignore  Cargo.toml
performance-analysis/src/: main.rs
rust-tests/: Cargo.toml
rust-tests/lib/: rust-nethuns
scripts/: pkt-gen-rx.sh  pkt-gen-tx.sh  recv-cpp.sh  recv-rust.sh  run-ssh-experiments.sh  send-cpp.sh  send-rust.sh  send-zero-cpp.sh  send-zero-rust.sh
(+55 files in other folders)
