[package]
name = "performance-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.75"
itertools-num = "0.1.3"
plotly = { version = "0.8.4", features = ["kaleido"] }
rand = "0.8.5"
rand_distr = "0.4.3"
statistical = "1.0.0"
